--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		    <p>
 		      Game Over!
 		      <br />
-		      You collected a total of <a id="finalScore">0</a> coins!
+		      You collected a total of <a id="finalScore">0</a>!
 		    </p>
 		    <button id="startButton">Play Again</button>
 		    <br />
